Metastore service (#252)
* Metastore service
* Address several Code Climate issues
* Fix code style issues
* Fix complexity issues
